--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,6 +11,7 @@ HEADER
 ***/
 header{
     background-color: lightgrey;
+    text-align: center;
 }
 
 /***
@@ -64,6 +65,7 @@ FOOTER
 ***/
 footer{
     background-color: lightgrey;
+    text-align: center;
 }
 
 /***
