--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,9 +1,58 @@
 /***
 GENERAL
 ***/
+
+/***
+GUI
+***/
+/* Links */
 a{
     text-decoration:none;
     color: black;
+}
+a:hover{
+    text-decoration:none;
+    color: blue;
+}
+/* input fields */
+input[type='text'],
+input[type='email']{
+    background-color: white;
+    border-radius: 4px;
+    border: 1px solid black;
+    padding: 5px;
+}
+
+input[type='text']:focus,
+input[type='email']:focus{
+    outline: 1px solid red;
+}
+/*buttons*/
+input[type='submit'],
+button,
+.btn-cta{
+    background-color: green;
+    color: white;
+    border-radius: 4px;
+    border: 1px solid black;
+    padding: 5px 10px;
+    display: inline-block;
+}
+input[type='submit']:hover,
+button:hover,
+.btn-cta:hover{
+    background-color: white;
+    color: black;
+    border: 1px solid green;
+    cursor: pointer;
+}
+input[type='submit']:focus,
+button:focus,
+.btn-cta:focus{
+    background-color: white;
+    color: black;
+    outline: 1px solid red;
+    cursor: pointer;
 }
 
 /***
