--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,7 +20,7 @@ input[type='email']{
     background-color: white;
     border-radius: 4px;
     border: 1px solid black;
-    padding: 5px;
+    padding: 10px 5px;
 }
 
 input[type='text']:focus,
@@ -35,7 +35,7 @@ button,
     color: white;
     border-radius: 4px;
     border: 1px solid black;
-    padding: 5px 10px;
+    padding: 10px 15px;
     display: inline-block;
 }
 input[type='submit']:hover,
@@ -126,4 +126,21 @@ PARTAGE RS
     border: 0;
     box-shadow: none;
     display: inline;
+}
+
+/***
+MODULE ACCESSIBILITE
+***/
+#module-accessibilite{
+    background-color: white;
+    padding: 20px;
+    position: fixed;
+    top: 0;
+    right: 0;
+    border: 1px solid lightgrey;
+    z-index: 1000;
+}
+.white-on-black{
+    background : black;
+    color : white;
 }
