--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -127,24 +127,35 @@ PARTAGE RS
 /***
 MODULE ACCESSIBILITE
 ***/
+.cta-accessibilite{
+    position: fixed;
+    bottom: 10px;
+    right: 10px;
+    border: 1px solid lightgrey;
+    padding: 10px;
+    font-size: 25px;
+    cursor: pointer;
+}
 #module-accessibilite{
     background-color: white;
     padding: 10px 20px;
     position: fixed;
-    bottom: 0;
+    top: 0;
     right: 0;
     border: 1px solid lightgrey;
     z-index: 1000;
-    width: 100%;
+    height: 100vh;
     text-align: center;
-    border-top: 1px solid black;
+    border-left: 1px solid black;
+    transform: translate(100%,0);
+    transition: 0.3s;
 }
 .white-on-black{
     background : black;
     color : white;
     border: 1px solid white;
 }
-#module-accessibilite span{
+#module-accessibilite .close{
     position: absolute;
     bottom: 10px;
     right:10px;
