--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,7 +9,7 @@ body {
     position: relative;
 }
 h1,h2,h3,h4,h5,h6{
-    font-family: 'Julius Sans One', sans-serif;
+    /*font-family: 'Julius Sans One', sans-serif;*/
 }
 h1{
     font-size: 3em;
@@ -25,32 +25,30 @@ GUI
 a{
     text-decoration:none;
     color: black;
-    position: relative;
 }
 a:hover{
     text-decoration: none;
 }
-.link-underline-white:after{
+.link-blue{
+    position: relative;
+    color: #272C80;
+}
+.link-blue:hover{
+    color: #272C80;
+}
+.link-blue:after{
     content: '';
-    display: inline-block;
     width: 100%;
-    height: 1px;
-    background: white;
-    border-bottom: 1px solid white;
-    margin-bottom: 2px;
+    height: 2px;
+    background: #272C80;
     position: absolute;
-    bottom: -4px;
+    bottom: -3px;
     left: 0;
     transition: 0.2s;
+    display: none;
 }
-.link-underline-white:hover{
-    text-decoration:none;
-    color: white;
-}
-.link-underline-white:hover:after{
-    border-bottom: 3px solid white;
-    margin-bottom: 0px;
-    transition: 0.1s;
+.link-blue:hover:after{
+    display: block;
 }
 /* input fields */
 input[type='text'],
@@ -165,12 +163,7 @@ TEMOIGNAGE
 FOOTER
 ***/
 footer{
-    background-color: #272c80;
     text-align: center;
-    color: white;
-}
-footer a{
-    color:white;
 }
 
 /***
