--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -81,7 +81,7 @@ input[type='email']:focus{
 label{
     font-weight: bold;
     font-size: 1.15em;
-    margin-top: 80px;
+    margin-top: 40px;
 }
 /*buttons*/
 .custom-btn-yellow{
@@ -157,21 +157,22 @@ ABOUT US
     width: 370px;
 }
 #about-us span{
-    position: absolute;
-    bottom: 70px;
-    left: 50%;
-    transform: translate(-50%,0);
     font-weight: bold;
     font-size: 2em;
+    display: block;
 }
 #about-us .cts{
     position: absolute;
     bottom: 30px;
     left: 50%;
-    transform: translate(-50%,0);
+    width: 200px;
+    text-align: center;
+    margin-left: -100px;
+    animation: float 3s ease-in-out infinite;
+}
+#about-us .cts img{
     width: 30px;
     height: auto;
-    animation: float 3s ease-in-out infinite;
 }
 @keyframes float {
     0% {
@@ -200,13 +201,13 @@ QUOTAS
     max-width: 100%;
 }
 #test-quota #calculQuota{
-    margin: 180px auto 0 auto;
+    margin: 60px auto 0 auto;
 }
 #test-quota img{
     position: absolute;
     bottom: 0;
     right: 20px;
-    width: 300px;
+    width: 240px;
 }
 #test-quota #resultQuota{
     margin-top: 80px;
@@ -244,8 +245,15 @@ CONVERSION
 
     padding: 80px 0;
 }
-#conversion p,#conversion h2,#conversion label,#conversion strong,#conversion .error-checkbox,#conversion .error-email{
+#conversion p,#conversion h2,#conversion label,#conversion strong,#conversion .error-checkbox,#conversion .error-email,#conversion .errorContact{
     color:white;
+}
+#formResponse{
+    text-align: center;
+}
+#conversion .errorContact{
+    padding: 10px;
+    border: 1px solid white;
 }
 #conversion p{
     text-align: center;
@@ -285,7 +293,7 @@ CONVERSION
     margin-right: 10px;
 }
 .label-checkbox:hover:before{
-    background: #f2c03c;
+    /*background: #f2c03c;*/
     cursor: pointer;
 }
 .selected-checkbox:before{
@@ -342,6 +350,9 @@ PARTAGE RS
     font-size: 25px;
     font-weight: bold;
     display: block;
+}
+#reseaux #share-buttons a:hover span,#reseaux #share-buttons a:hover i{
+    color:#f2c03c;
 }
 
 /***
