--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,12 +15,15 @@ h1,h2,h3,h4,h5,h6{
 h1{
     font-size: 3em;
     font-weight: bold;
+    text-transform: uppercase;
+    margin-bottom: 50px;
 }
 h2{
     text-align: center;
     margin-bottom: 30px;
     font-weight: bold;
     font-size: 2em;
+    text-transform: uppercase;
 }
 p{
     font-size: 1.15em;
@@ -81,7 +84,7 @@ input[type='email']:focus{
 label{
     font-weight: bold;
     font-size: 1.15em;
-    margin-top: 80px;
+    margin-top: 40px;
 }
 /*buttons*/
 .custom-btn-yellow{
@@ -116,7 +119,21 @@ input:focus:-moz-placeholder { color:transparent; } /* FF 4-18 */
 input:focus::-moz-placeholder { color:transparent; } /* FF 19+ */
 input:focus:-ms-input-placeholder { color:transparent; } /* IE 10+ */
 
+.section-bleu{
+    background-color: #272c80;
+}
 
+.section-bleu span,
+.section-bleu h1,
+.section-bleu p,
+.section-bleu h2,
+.section-bleu label,
+.section-bleu strong,
+.section-bleu .error-checkbox,
+.section-bleu .error-email,
+.section-bleu .errorContact{
+    color:white!important;
+}
 
 /***
 HEADER
@@ -139,39 +156,42 @@ header img{
 SECTION
 ***/
 section{
-    margin: 70px 0;
+    padding: 50px 0;
 }
 
 /***
 ABOUT US
 ***/
 #about-us{
-    height: calc(100vh - 268px);
+    height: calc(100vh - 204px);
     position: relative;
-    margin-top: 50px;
+    margin-top: 0;
+    padding-top: 50px;
 }
 #about-us .container-picto{
     text-align: right;
+    margin-top: 120px;
 }
 #about-us .container-picto img{
     width: 370px;
 }
 #about-us span{
-    position: absolute;
-    bottom: 70px;
-    left: 50%;
-    transform: translate(-50%,0);
     font-weight: bold;
     font-size: 2em;
+    display: block;
 }
 #about-us .cts{
     position: absolute;
     bottom: 30px;
     left: 50%;
-    transform: translate(-50%,0);
+    width: 300px;
+    text-align: center;
+    margin-left: -150px;
+    animation: float 3s ease-in-out infinite;
+}
+#about-us .cts img{
     width: 30px;
     height: auto;
-    animation: float 3s ease-in-out infinite;
 }
 @keyframes float {
     0% {
@@ -200,13 +220,13 @@ QUOTAS
     max-width: 100%;
 }
 #test-quota #calculQuota{
-    margin: 180px auto 0 auto;
+    margin: 60px auto 0 auto;
 }
 #test-quota img{
     position: absolute;
     bottom: 0;
     right: 20px;
-    width: 300px;
+    width: 240px;
 }
 #test-quota #resultQuota{
     margin-top: 80px;
@@ -221,8 +241,13 @@ STEPS
     padding: 10px 40px;
     text-align: center;
     font-weight: bold;
-    height: 500px;
+    height: 550px;
     position: relative;
+    margin: 0px!important;
+}
+#steps .step .title{
+    font-weight: bold;
+    text-transform: uppercase;
 }
 #steps .step .number{
     width: 90px;
@@ -240,12 +265,14 @@ STEPS
 CONVERSION
 ***/
 #conversion{
-    background-color: #272c80;
-
     padding: 80px 0;
 }
-#conversion p,#conversion h2,#conversion label,#conversion strong,#conversion .error-checkbox,#conversion .error-email{
-    color:white;
+#formResponse{
+    text-align: center;
+}
+#conversion .errorContact{
+    padding: 10px;
+    border: 1px solid white;
 }
 #conversion p{
     text-align: center;
@@ -285,7 +312,7 @@ CONVERSION
     margin-right: 10px;
 }
 .label-checkbox:hover:before{
-    background: #f2c03c;
+    /*background: #f2c03c;*/
     cursor: pointer;
 }
 .selected-checkbox:before{
@@ -342,6 +369,9 @@ PARTAGE RS
     font-size: 25px;
     font-weight: bold;
     display: block;
+}
+#reseaux #share-buttons a:hover span,#reseaux #share-buttons a:hover i{
+    color:#f2c03c;
 }
 
 /***
@@ -542,8 +572,8 @@ MODULE ACCESSIBILITE
     }
 }
 @media screen and (max-width: 768px) {
-    #about-us .container-picto img {
-        width: 200px;
+    #about-us .container-picto {
+        display: none;
     }
     #test-quota #calculQuota {
         margin: 50px auto 0 auto;
@@ -552,8 +582,16 @@ MODULE ACCESSIBILITE
         display: none;
     }
     #steps .step {
-        height: 430px;
-        margin-bottom: 15px;
+        margin-bottom: 55px!important;
+        border: none;
+        height: auto;
+    }
+    #steps .step .ornement {
+        position: relative;
+        bottom: auto;
+        left: auto;
+        transform: translate(0,0);
+        margin-top: 0;
     }
     #reseaux #share-buttons a {
         margin: 0 30px;
@@ -582,9 +620,6 @@ MODULE ACCESSIBILITE
     #about-us .container-picto img {
         display: none;
     }
-    #steps .step {
-        height: 450px;
-    }
     #reseaux #share-buttons a {
         margin: 0px 15px;
     }
@@ -601,7 +636,11 @@ MODULE ACCESSIBILITE
         bottom: 40px;
     }
     #steps .step .ornement {
-        width: 120px;
+        display: none;
+    }
+    #test-quota {
+        border: none;
+        border-radius: 0;
     }
 }
 @media screen and (max-width: 352px){
