--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -145,6 +145,9 @@ header img{
     max-width: 500px;
     margin: 50px 0;
 }
+header .container-logo{
+    padding: 0 30px;
+}
 .separateur{
     border-radius: 10px;
     background-color: #2d57bb;
@@ -169,10 +172,9 @@ ABOUT US
 }
 #about-us .container-picto{
     text-align: right;
-    margin-top: 120px;
 }
 #about-us .container-picto img{
-    width: 370px;
+    width: 300px;
 }
 #about-us span{
     font-weight: bold;
@@ -638,9 +640,11 @@ MODULE ACCESSIBILITE
     header img {
         margin: 20px 0;
     }
+    section {
+        padding: 30px 0;
+    }
     #about-us {
         height: auto;
-        margin-top: 20px;
     }
     #about-us span,#about-us .cts {
         display: none;
@@ -672,6 +676,10 @@ MODULE ACCESSIBILITE
     #test-quota {
         border: none;
         border-radius: 0;
+        margin-top: 0;
+    }
+    #steps .step {
+        margin-bottom: 35px!important;
     }
 }
 @media screen and (max-width: 352px){
