--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -70,7 +70,7 @@ input[type='email']{
     background-color: white;
     border: 1px solid #272c80;
     border-radius: 8px;
-    padding: 10px 5px;
+    padding: 10px;
     height: 53px;
     width: 100%;
     max-width: 400px;
@@ -228,9 +228,6 @@ QUOTAS
     bottom: 0;
     right: 20px;
     width: 240px;
-}
-#test-quota #resultQuota{
-    margin-top: 80px;
 }
 #icon-incoherent,#icon-valid,#icon-wrong{
     text-align: center;
