--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -61,6 +61,15 @@ a:hover{
     transition: 0.2s;
     display: none;
 }
+.section-bleu .link-blue{
+    color: white;
+}
+.section-bleu .link-blue:hover{
+    color: white;
+}
+.section-bleu .link-blue:after{
+    background: white;
+}
 .link-blue:hover:after{
     display: block;
 }
@@ -122,6 +131,9 @@ input:focus:-ms-input-placeholder { color:transparent; } /* IE 10+ */
 .section-bleu{
     background-color: #272c80;
 }
+.section-gris{
+    background: #eef1f4;
+ }
 
 .section-bleu span,
 .section-bleu h1,
@@ -130,7 +142,8 @@ input:focus:-ms-input-placeholder { color:transparent; } /* IE 10+ */
 .section-bleu label,
 .section-bleu strong,
 .section-bleu .error-checkbox,
-.section-bleu .errorContact{
+.section-bleu .errorContact,
+.section-bleu div{
     color:white!important;
 }
 
@@ -139,6 +152,7 @@ HEADER
 ***/
 header{
     text-align: center;
+    background: #eef1f4;
 }
 header img{
     width: 100%;
@@ -212,10 +226,12 @@ QUOTAS
 ***/
 #test-quota{
     margin-top: 50px;
-    border: 4px solid #f2c03c;
     padding: 50px 20px;
     position: relative;
     border-radius: 12px;
+}
+#test-quota #resultQuota {
+    margin-top: 40px;
 }
 #test-quota img{
     max-width: 100%;
@@ -264,10 +280,15 @@ STEPS
     height: 550px;
     position: relative;
     margin: 0px!important;
+    background-color: #eef1f4;
 }
 #steps .step .title{
     font-weight: bold;
     text-transform: uppercase;
+    color: #2d57bb!important;
+}
+#steps .step p{
+    color: #2d57bb!important;
 }
 #steps .step .number{
     width: 90px;
@@ -287,9 +308,9 @@ CONVERSION
 #conversion{
     padding: 80px 0;
 }
-#conversion p,#conversion h2,#conversion label,#conversion strong,#conversion .error-checkbox,#conversion .error-email,#conversion .errorContact{
+/*#conversion p,#conversion h2,#conversion label,#conversion strong,#conversion .error-checkbox,#conversion .error-email,#conversion .errorContact{
     color:white;
-}
+}*/
 #conversion .errorContact{
     padding: 10px;
     border: 1px solid white;
@@ -386,9 +407,12 @@ PARTAGE RS
 #reseaux h2{
     margin-bottom: 50px;
 }
+#reseaux #share-buttons{
+    margin-bottom: 30px;
+}
 #reseaux #share-buttons a{
     display: inline-block;
-    margin: 0 75px;
+    margin: 0 35px;
 }
 #reseaux #share-buttons a i{
     font-size: 70px;
