--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -144,7 +144,7 @@ input:focus:-ms-input-placeholder { color:transparent; } /* IE 10+ */
 .section-bleu .error-checkbox,
 .section-bleu .errorContact,
 .section-bleu div{
-    color:white!important;
+    color: #eef1f4!important;
 }
 
 /***
@@ -379,7 +379,7 @@ input[type='checkbox']{
     content: "";
     width: 43px;
     height: 43px;
-    background: url(../img/error.svg) no-repeat center;
+    background: url(../img/croix_rouge.svg) no-repeat center;
     -webkit-background-size: cover;
     opacity: 0;
     display: inline-block;
@@ -434,6 +434,9 @@ FOOTER
 footer{
     text-align: center;
     padding: 30px 0;
+}
+footer h2{
+    text-align: center!important;
 }
 
 /***
@@ -603,10 +606,6 @@ MODULE ACCESSIBILITE
 @media screen and (max-width: 992px) {
     #about-us .container-picto img {
         width: 300px;
-    }
-    #reseaux #share-buttons a{
-        display: inline-block;
-        margin: 0 50px;
     }
     #steps .step {
         padding: 7px 0px;
