--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -29,20 +29,20 @@ header .logoContainer{
 
 header .pageTitle{
     position:absolute;
-    left:calc(20px + 10vw);
-    bottom: calc(350px + 15vw);
+    left:calc(20px + 8vw);
+    bottom: calc(350px + 12vw);
 }
 
 header h1{
     color: #EDB42C;
     font-family: 'Roboto', sans-serif;
-    font-size:1.5rem;
+    font-size:calc(1.5rem + 1vw);
 }
 
 header p{
     font-family: 'Avenir', sans-serif;
     color: #fff;
-    font-size:1.25rem;
+    font-size:calc(1rem + 1vw);
 }
 
 section{
@@ -67,17 +67,19 @@ section{
 .explainerContainer > div:first-child iframe{
     width:inherit;
     height:inherit;
+    border: none;
 }
 
 .explainerContainer > div:last-child{
     padding:40px;
+    width:100%;
 }
 
 .explainerContainer h3 {
     color: #EDB42C;
     font-family: 'Avenir', sans-serif;
     font-weight: bold;
-    font-size:1.3rem;
+    font-size:1.5rem;
     margin-bottom:50px;
     position:relative;
 }
@@ -94,7 +96,7 @@ section{
 
 .explainerContainer p {
     font-family: 'Avenir', sans-serif;
-    font-size:1rem;
+    font-size:1.25rem;
     margin-left:15px;
     line-height: 1.3;
 }
@@ -141,14 +143,14 @@ section{
 .threePartConcept article h2{
     color: #EDB42C;
     font-family: 'Roboto', sans-serif;
-    font-size:18px;
+    font-size:23px;
     text-align: center;
 }
 
 .threePartConcept article p{
     color: #fff;
     font-family: 'Avenir', sans-serif;
-    font-size:15px;
+    font-size:18px;
     max-width: 200px;
     width:80%;
     margin:0 auto;
@@ -169,17 +171,18 @@ section{
 }
 
 .ctaForm > div h4{
-    font-size: 1.4rem;
+    font-size: 1.65rem;
     margin-bottom: 40px;
     font-family: 'Roboto', sans-serif;
 }
 
-.ctaForm > div form label, .ctaForm > div form p{
+.ctaForm > div form label, .ctaForm > div p{
     font-family: 'Avenir', sans-serif;
     line-height: 1.5;
-    font-size: 0.8rem;
+    font-size: 1rem;
     display:flex;
-    flex-direction: column;
+    flex-direction: row;
+    margin-bottom:20px;
 }
 
 .ctaForm > div form label span{
@@ -192,6 +195,11 @@ section{
     color: #000;
     padding:5px;
     border-bottom: 2px solid #FBF7EB;
+    width:100%;
+}
+
+.ctaForm > div form input[type="checkbox"]{
+    margin-right:20px;
 }
 
 .ctaForm > div form input[type="email"]:focus{
@@ -224,7 +232,7 @@ margin: 20px 0 0 calc(50% - 40px);
     color: #EDB42C;
     font-family: 'Avenir', sans-serif;
     font-weight: bold;
-    font-size:1.3rem;
+    font-size:1.5rem;
     margin:40px 0 50px 20px;
     position:relative;
 }
@@ -325,7 +333,7 @@ margin: 20px 0 0 calc(50% - 40px);
     color: #EDB42C;
     font-family: 'Avenir', sans-serif;
     font-weight: bold;
-    font-size:1.3rem;
+    font-size:1.5rem;
     margin-bottom:50px;
     padding: 40px 20px 0 0;
     position:relative;
@@ -376,14 +384,14 @@ margin: 20px 0 0 calc(50% - 40px);
 .userSlider > div > article h4{
     color: #EDB42C;
     font-family: 'Roboto', sans-serif;
-    font-size: 1.2rem;
+    font-size: 1.35rem;
     margin-bottom: 30px;
 }
 
 .userSlider > div > article p{
     color: #fff;
     font-family: 'Avenir', sans-serif;
-    font-size: 0.9rem;
+    font-size: 1rem;
 }
 
 .controls{
@@ -464,6 +472,10 @@ footer #reseaux #share-buttons a:nth-of-type(2):hover{
     color: #1da1f2
 }
 
+footer #reseaux #share-buttons a:nth-of-type(3):hover{
+    color: #0e76a8
+}
+
 footer #reseaux #share-buttons a:last-of-type:hover{
     color: #fb3958
 }
@@ -487,6 +499,8 @@ footer > div:last-of-type a:visited{
     color: #fff;
 }
 
-
+.mentions_legales h2, .mentions_legales h3, .mentions_legales a{
+    color: #E09E00;
+}
 
 
