--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -352,7 +352,7 @@ margin: 20px 0 0 calc(50% - 40px);
 .usagesImages{
     width:100%;
     margin-bottom:40px;
-    height:500px;
+    height:auto;
     background-blend-mode: multiply;
     -webkit-background-size: cover; /* For WebKit*/
     -moz-background-size: cover;    /* Mozilla*/
@@ -361,19 +361,19 @@ margin: 20px 0 0 calc(50% - 40px);
     background-position: bottom;
 }
 
-#usagesRandonee{
+.usagesImages.randonee{
     background-image: url('../img/usagesRandonee.jpg');
 }
 
-#usagesEscalade{
+.usagesImages.escalade{
 
 }
 
-#usagesCueilette{
+.usagesImages.cueillette{
 
 }
 
-#usagesPeche{
+.usagesImages.peche{
 
 }
 
@@ -428,6 +428,14 @@ margin: 20px 0 0 calc(50% - 40px);
     display:flex;
     justify-content: center;
     padding-bottom:50px !important;
+}
+
+.tns-nav button{
+    height: 20px;
+    width:20px;
+    border-radius: 50%;
+    border: 2px solid #E09E00;
+    margin: 0 20px;
 }
 
 footer{
